# clihoot

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  default_questions.yaml
client/: Cargo.toml
client/src/: client.rs  lib.rs  main.rs  music_actor.rs  websocket.rs
client/src/student/: draw_states.rs  mod.rs  state.rs  states.rs  terminal.rs
client/src/student/handlers/: draw_handler.rs  input_handler.rs  mod.rs  server_network_message_handler.rs  tick_handler.rs  ws_status_handler.rs
client/src/terminal/: actor_data.rs  constants.rs  draw.rs  draw_handler.rs  draw_states.rs  handle_server_network_message.rs  handle_tick.rs  handle_ws_status.rs  input_handler.rs  input_handling.rs  mod.rs  state.rs  student.rs  terminal.rs
client/src/terminal/handlers/: draw_handler.rs  input_handler.rs  server_network_message_handler.rs  tick_handler.rs  ws_status_handler.rs
common/: Cargo.toml
common/src/: constants.rs  hello.rs  lib.rs  questions.rs  test_macros.rs  test_utils.rs
common/src/messages/: mod.rs  network.rs  status.rs  status_messages.rs
common/src/model/: mod.rs  network_messages.rs
common/src/terminal/: actor.rs  handle_terminal_events.rs  highlight.rs  input_utils.rs  messages.rs  mod.rs  render.rs  terminal_actor.rs  utils.rs
common/src/terminal/render/: helpers.rs  mod.rs  players_list.rs  popup.rs  question.rs  utils.rs
common/src/terminal/widgets/: choice.rs
common/tests/: choice_widget_conversions.rs  choice_widget_state.rs  questions_file.rs
common/tests/files/: err_choice_too_long.yml  err_code_too_long.yaml  err_missing_field.yaml  err_no_right.yaml  err_too_long_question.yaml  err_too_much_choices.yaml  err_unknown_language.yaml  ok_code.yaml  ok_language_name.yaml  ok_language_name_uppercase.yaml  ok_minimal.yaml  ok_multiple.yaml  ok_quiz_name.yaml
sample_quizes/: quiz-1.yml  (+2 more)
server/: Cargo.toml
server/src/: args.rs  lib.rs  main.rs
server/src/lobby/: init.rs  lobby_impl.rs  mod.rs  point_calculator.rs  state.rs
server/src/lobby/handlers/: answer_selected_handler.rs  disconnect_from_lobby_handler.rs  early_end_question_handler.rs  join_request_handler.rs  kick_player_handler.rs  mod.rs  register_teacher_handler.rs  register_teacher_message_handler.rs  server_hard_stop_handler.rs  set_lock_message_handler.rs  start_question_message_handler.rs  switch_to_leaderboard_handler.rs  try_join_request_handler.rs
server/src/messages/: client.rs  client_messages.rs  lobby.rs  mod.rs  teacher.rs  teacher_messages.rs  websocket.rs  websocket_messages.rs
server/src/server/: client_messages.rs  init.rs  lobby.rs  messages.rs  mod.rs  point_calculator.rs  state.rs  teacher_messages.rs  websocket.rs
server/src/server/handlers/: answer_selected_handler.rs  connect_to_lobby_handler.rs  disconnect_from_lobby_handler.rs  early_end_question_handler.rs  get_server_state_handler.rs  join_request_handler.rs  kick_player_handler.rs  mod.rs  register_teacher_message_handler.rs  server_graceful_stop_handler.rs  server_hard_stop_handler.rs  set_lock_message_handler.rs  start_question_message_handler.rs  switch_to_leaderboard_handler.rs  try_join_request_handler.rs
server/src/teacher/: draw_states.rs  init.rs  mod.rs  states.rs  terminal.rs
server/src/teacher/handlers/: draw_handler.rs  draw_states.rs  hard_stop_handler.rs  input_handler.rs  mod.rs  next_question_handler.rs  players_update_handler.rs  question_ended_handler.rs  question_update_handler.rs  show_leaderboard_handler.rs  teacher_hard_stop_handler.rs  teacher_stop_handler.rs  tick_handler.rs
server/src/terminal/: mod.rs  teacher.rs
server/src/websocket/: mod.rs  websocket.rs  websocket_impl.rs  ws_utils.rs
server/tests/: answer_can_be_selected.rs  answer_cannot_be_selected_if_question_is_not_started.rs  client_connects_and_joins.rs  lobby_locked_client_cannot_connect.rs  multiple_players_can_join.rs  next_question_is_delivered.rs  player_disconnects_and_server_sends_notices.rs  players_update_is_delivered.rs  question_ends_itself_after_timeout.rs  question_update_is_delivered.rs  round_ends_when_all_players_answered.rs  server_starts.rs  teacher_can_kick_player.rs  teacher_can_lock_game.rs  teacher_can_switch_to_leaderboard.rs  todo.txt  two_question_game_simulation.rs  utils.rs
server/tests/fixtures/: create_server.rs  create_server_and_teacher.rs  create_teacher.rs  mod.rs  sample_questions.rs
server/tests/mocks/: get_server_state_handler.rs  mod.rs
(+21 files in other folders)
