[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
uuid = { version = "1.6.1", features = ["v4"] }
actix = "0.13.1"
actix-rt = "2.9.0"
rodio = "0.17.3"
anyhow = "1.0.75"
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.29"
ratatui = "0.24.0"
tokio = { version = "1.34.0", features = ["full"] }
