[package]
name = "common"
version = "0.1.0"
edition = "2021"

[features]
test = []
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
crossterm = { version = "0.27.0", features = ["event-stream"] }
figlet-rs = "0.1.5"
futures = "0.3.29"
log = "0.4.20"
ratatui = "0.25.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.27"
syntect = "5.1.0"
tokio = { version = "1.35.1", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
