[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
common = { path = "../common" }
clap = { version = "4.4.11", features = ["derive"] }
clap-num = "1.0.2"
actix = "0.13.1"
actix-rt = "2.9.0"
async-trait = "0.1.74"
futures = "0.3.29"
futures-util = "0.3.29"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tokio-tungstenite = "0.20.1"
tungstenite = "0.20.1"
uuid = { version = "1.5.0", features = ["v4", "serde"] }
rand = "0.8.5"
