[package]
name = "server"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-rt = "2.9.0"
anyhow = "1.0.75"
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive"] }
clap-num = "1.0.2"
common = { path = "../common" }
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures-util = "0.3.29"
log = "0.4.20"
rand = "0.8.5"
ratatui = "0.25.0"
rstest = "0.18.2"
serde_json = "1.0"
simplelog = { version = "0.12.1", features = ["paris", "test", "ansi_term"] }
tokio = { version = "1.35.1", features = ["full"] }
tokio-tungstenite = "0.21.0"
tungstenite = "0.21.0"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
